# steer-heal-love

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  spec.md
docs/: RESEARCH_JOURNAL.md  human_journal.md  results.md  rmse_outputs.html
docs/reviews/: 20260624_love_filter_tighten_code.md  20260624_love_loop_collapse_code.md  care_lens_plan.md  kl_agg_review.md  love_humanity_demo.md  pool_saturation_test.md
docs/spec/: 20260624_last_good_kl_anchor.md  20260624_love_filter_tighten_requeue.md  20260624_love_loop_collapse_audit.md
docs/writeup/: .gitignore  paper.qmd  references.bib
docs/writeup/_extensions/neurips/: _extension.yml
scripts/: diag_axis.py  diag_barrier.py  diag_csweep.py  diag_heal.py  diag_heal_sweep.py  diag_kl_agg.py  diag_stages.py  judge_love.py  plot_run.py  results.py
src/steer_heal/: __init__.py  config.py  eval.py  filter.py  heal.py  io.py  plot.py  prompts.py  run.py  steering.py
src/steer_heal/ws/: __init__.py  adapter.py  bake.py
